syntax = "proto3";

package async_pbrpc;

message Void {
}

message NoReturn {
}
